# S32K3X_Workspace

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  conanfile.py  pyproject.toml
.conan/profiles/: s32k3x_arm_cortex_m7  s32k3x_workspace_linux
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: linux-gcc-arm-pipeline.yml
bsp/: CMakeLists.txt
bsp/config/board/: Siul2_Port_Ip_Cfg.c  Siul2_Port_Ip_Cfg.h  Tspc_Port_Ip_Cfg.c  Tspc_Port_Ip_Cfg.h
bsp/drivers/rtd/include/: Clock_Ip.h  Clock_Ip_Derivative_001.h  Clock_Ip_Derivative_002.h  Clock_Ip_Derivative_003.h  Clock_Ip_Derivative_004.h  Clock_Ip_Derivative_005.h  Clock_Ip_Derivative_006.h  Clock_Ip_Derivative_007.h  Clock_Ip_Derivative_008.h  Clock_Ip_Derivative_009.h  Clock_Ip_Derivative_010.h  Clock_Ip_Private.h  Clock_Ip_Specific.h  Clock_Ip_TrustedFunctions.h  Clock_Ip_Types.h  Det.h  Det_LinkedList.h  Det_stub.h  Mcu.h  Mcu_Dem_Wrapper.h  Mcu_EnvCfg.h  Mcu_Ipw.h  Mcu_Ipw_Types.h  Mcu_TrustedFunctions.h  OsIf.h  OsIf_Cfg_TypesDef.h  OsIf_DeviceRegisters.h  OsIf_Internal.h  OsIf_Interrupts.h  OsIf_Software_Semaphore.h  OsIf_Timer_Custom.h  OsIf_Timer_System.h  OsIf_Timer_System_Internal_Systick.h  OsIf_TrustedFunctions.h  Power_Ip.h  Power_Ip_AEC.h  Power_Ip_AEC_Types.h  Power_Ip_CortexM7.h  Power_Ip_DCM_GPR.h  Power_Ip_DCM_GPR_Types.h  (+21 more)
bsp/drivers/rtd/src/: Clock_Ip.c  Clock_Ip_Data.c  Clock_Ip_Divider.c  Clock_Ip_DividerTrigger.c  Clock_Ip_ExtOsc.c  Clock_Ip_FracDiv.c  Clock_Ip_Frequency.c  Clock_Ip_Gate.c  Clock_Ip_IntOsc.c  Clock_Ip_Irq.c  Clock_Ip_Monitor.c  Clock_Ip_Pll.c  Clock_Ip_ProgFreqSwitch.c  Clock_Ip_Selector.c  Clock_Ip_Specific.c  Det.c  Det_stub.c  Mcu.c  Mcu_Dem_Wrapper.c  Mcu_Ipw.c  OsIf_Interrupts.c  OsIf_Software_Semaphore.c  OsIf_Timer.c  OsIf_Timer_System.c  OsIf_Timer_System_Internal_Systick.c  Power_Ip.c  Power_Ip_AEC.c  Power_Ip_CortexM7.c  Power_Ip_DCM_GPR.c  Power_Ip_FLASH.c  Power_Ip_MC_ME.c  Power_Ip_MC_RGM.c  Power_Ip_MC_RGM_Irq.c  Power_Ip_PMC.c  Power_Ip_PMC_Irq.c  Power_Ip_Private.c  Ram_Ip.c  SchM_BaseNXP.c  SchM_Mcu.c  SchM_Port.c  (+2 more)
bsp/linker/: linker_flash_s32k358.ld
bsp/startup/: Vector_Table.s  exceptions.c  nvic.c  startup.c  startup_cm7.s  system.c
cmake/: CodeCoverage.cmake
include/: config.h.in
include/s32k3x/: main.h
libs/autosar-platform-types/include/: Platform_Types.h  Std_Types.h
scripts/: version
src/: CMakeLists.txt  main.c
test/unit_tests/: CMakeLists.txt  test_main.cpp
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: test_package.c
